new login, splash screen, logout, stay log in

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,113 +19,159 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-    <LinearLayout
-        android:id="@+id/ly1"
+    <androidx.cardview.widget.CardView
+        app:layout_constraintTop_toBottomOf="@+id/title"
+        android:layout_margin="16dp"
+        app:cardCornerRadius="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/ly1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="@font/manropebold"
-            android:text="@string/welcome"
-            android:layout_marginBottom="10dp"
-            android:textColor="@color/black"
-            android:textSize="24dp"
+            android:orientation="vertical"
+            android:padding="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title" />
+            app:layout_constraintTop_toBottomOf="@id/title">
 
-        <EditText
-            android:id="@+id/email"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/border"
-            android:backgroundTint="@color/white"
-            android:fontFamily="@font/manroperegular"
-            android:hint="Enter Your Email"
-            android:textSize="12dp"
-            android:paddingLeft="10dp" />
+            <TextView
+                android:id="@+id/txt_welcome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/manropeextrabold"
+                android:text="@string/welcome"
+                android:layout_marginBottom="10dp"
+                android:textColor="@color/black"
+                android:textSize="24dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/title" />
 
-        <EditText
-            android:id="@+id/password"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/border"
-            android:backgroundTint="@color/white"
-            android:fontFamily="@font/manroperegular"
-            android:hint="Password"
-            android:textSize="12dp"
-            android:paddingLeft="10dp"
-            android:inputType="textPassword" />
+            <TextView
+                android:fontFamily="@font/manropesemibold"
+                android:text="Email Address"
+                android:layout_marginStart="7dp"
+                android:textColor="@color/black"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
-        <TextView
-            android:layout_gravity="end"
-            android:layout_marginTop="10dp"
-            android:id="@+id/forgetpassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/blue"
-            android:fontFamily="@font/manropesemibold"
-            android:text="@string/forger_password"
-            android:textSize="14dp" />
+            <EditText
+                android:id="@+id/email"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:background="@drawable/border"
+                android:fontFamily="@font/manroperegular"
+                android:hint="Enter Your Email"
+                android:textSize="12dp"
+                android:layout_marginBottom="10dp"
+                android:paddingLeft="10dp" />
+            <TextView
+                android:fontFamily="@font/manropesemibold"
+                android:text="Password"
+                android:layout_marginStart="7dp"
+                android:textColor="@color/black"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:background="@drawable/border"
+                android:fontFamily="@font/manroperegular"
+                android:hint="Password"
+                android:textSize="12dp"
+                android:paddingLeft="10dp"
+                android:inputType="textPassword" />
 
-    </LinearLayout>
+            <TextView
+                android:layout_gravity="end"
+                android:layout_marginTop="10dp"
+                android:id="@+id/forgetpassword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/blue"
+                android:layout_marginBottom="10dp"
+                android:fontFamily="@font/manropesemibold"
+                android:text="@string/forger_password"
+                android:textSize="14dp" />
 
-    <Button
-        android:id="@+id/btn_L"
-        android:layout_width="269dp"
-        android:layout_height="42dp"
-        android:background="@drawable/border"
-        android:fontFamily="@font/manropebold"
-        android:text="Login"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="20dp"
-        android:paddingVertical="0dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ly1" />
+            <Button
+                android:id="@+id/btn_L"
+                android:layout_width="269dp"
+                android:layout_height="42dp"
+                android:background="@drawable/border"
+                android:fontFamily="@font/manropebold"
+                android:paddingVertical="0dp"
+                android:text="Login"
+                android:layout_marginBottom="25dp"
+                android:layout_gravity="center"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/ly1" />
 
-    <LinearLayout
-        android:id="@+id/ly2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_L">
+            <LinearLayout
+                android:id="@+id/ly2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/btn_L">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:paddingBottom="5dp"
-            android:fontFamily="@font/manroperegular"
-            android:text="Not have an account?"
-            android:textSize="12dp" />
+                <ImageView
+                    android:layout_marginEnd="10dp"
+                    android:src="@drawable/search"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"/>
 
-        <TextView
-            android:id="@+id/txt_signup"
-            android:layout_marginTop="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:paddingBottom="5dp"
-            android:fontFamily="@font/manropebold"
-            android:text="Sign Up"
-            android:textColor="@color/blue" />
+                <ImageView
+                    android:layout_marginStart="10dp"
+                    android:src="@drawable/facebook"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"/>
+            </LinearLayout>
 
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/ly3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/ly2">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/manroperegular"
+                    android:paddingBottom="5dp"
+                    android:text="Not have an account?"
+                    android:textSize="12dp" />
+
+                <TextView
+                    android:id="@+id/txt_signup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:fontFamily="@font/manropesemibold"
+                    android:paddingBottom="5dp"
+                    android:text="Sign Up"
+                    android:textColor="@color/blue" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
